force-app/main/default/objects/IFv2_CustomFieldLabel__mdt/IFv2_CustomFieldLabel__mdt.object-meta.xml
<CustomObject>
    <description>Custom field label to display on the page layout in InsightFlow application version 2.0</description>
    <label>Custom Field Label</label>
    <pluralLabel>Custom Field Labels</pluralLabel>
</CustomObject>