force-app/main/default/objects/IFv2_CustomFieldLabel__mdt/fields/AllowCreate__c.field-meta.xml
<CustomField>
    <fullName>AllowCreate__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked if users should be allowed to create records from the lookup field</description>
    <inlineHelpText>Checked if users should be allowed to create records from the lookup field</inlineHelpText>
    <label>Allow Record Creation</label>
    <type>Checkbox</type>
</CustomField>