force-app/main/default/objects/IFv2_CustomFieldLabel__mdt/fields/DisplayLabel__c.field-meta.xml
<CustomField>
    <fullName>DisplayLabel__c</fullName>
    <inlineHelpText>Display Label for url fields, leave blank to display the url path on the field</inlineHelpText>
    <label>Display Label</label>
    <length>80</length>
    <type>Text</type>
</CustomField>