force-app/main/default/objects/IFv2_CustomFieldLabel__mdt/fields/FieldAPIName__c.field-meta.xml
<CustomField>
    <fullName>FieldAPIName__c</fullName>
    <inlineHelpText>Please enter the API name of the field</inlineHelpText>
    <label>Field API Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>