force-app/main/default/objects/IFv2_CustomFieldLabel__mdt/fields/FieldLabel__c.field-meta.xml
<CustomField>
    <fullName>FieldLabel__c</fullName>
    <inlineHelpText>Please enter the custom field label to be displayed</inlineHelpText>
    <label>Field Label</label>
    <length>80</length>
    <type>Text</type>
</CustomField>