force-app/main/default/objects/IFv2_CustomFieldLabel__mdt/fields/LookupFilter__c.field-meta.xml
<CustomField>
    <fullName>LookupFilter__c</fullName>
    <description>Filter to be applied on the SOQL query on lookup fields</description>
    <inlineHelpText>Filter to be applied on the SOQL query on lookup fields</inlineHelpText>
    <label>Lookup Filter</label>
    <length>255</length>
    <type>Text</type>
</CustomField>