force-app/main/default/objects/IFv2_CustomFieldLabel__mdt/fields/LookupObject__c.field-meta.xml
<CustomField>
    <fullName>LookupObject__c</fullName>
    <description>API Name of Object to which the field should lookup to for using text fields as lookup. Not required in case of user lookup</description>
    <inlineHelpText>API Name of Object to which the field should lookup to for using text fields as lookup. Not required in case of user lookup</inlineHelpText>
    <label>Lookup Object</label>
    <length>100</length>
    <type>Text</type>
</CustomField>