force-app/main/default/objects/IFv2_CustomFieldLabel__mdt/fields/SearchField__c.field-meta.xml
<CustomField>
    <fullName>SearchField__c</fullName>
    <description>Name of the field to be used for searching on Lookup</description>
    <inlineHelpText>Field Name to display on lookup</inlineHelpText>
    <label>Search Field</label>
    <length>100</length>
    <type>Text</type>
</CustomField>