force-app/main/default/objects/IFv2_CustomFieldLabel__mdt/fields/Section__c.field-meta.xml
<CustomField>
    <fullName>Section__c</fullName>
    <inlineHelpText>Please select the section to which this field belongs</inlineHelpText>
    <label>Section</label>
    <referenceTo>IFv2_Section__mdt</referenceTo>
    <relationshipLabel>Custom Field Labels</relationshipLabel>
    <relationshipName>CustomFieldLabels</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>