force-app/main/default/objects/IFv2_CustomFieldLabel__mdt/listViews/CustomLabelListView.listView-meta.xml
<ListView>
    <fullName>CustomLabelListView</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>MasterLabel</field>
        <operation>startsWith</operation>
        <value>Supplier</value>
    </filters>
    <label>Custom Label List View</label>
    <language>en_US</language>
</ListView>