force-app/main/default/objects/IFv2_CustomFieldLabel__mdt/listViews/MyView.listView-meta.xml
<ListView>
    <fullName>MyView</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>FieldAPIName__c</columns>
    <columns>FieldLabel__c</columns>
    <columns>Section__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>DeveloperName</field>
        <operation>contains</operation>
        <value>Concession</value>
    </filters>
    <label>My View</label>
    <language>en_US</language>
</ListView>